--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,9 +13,7 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    - uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '3.0.100-rc1-014190'
+    - run: dotnet run GitHubActionsExample
