--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,4 +16,4 @@ jobs:
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.0.100-rc1-014190'
-    - run: dotnet run GitHubActionsExample
+    - run: dotnet run
