--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,4 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: '3.0.100-rc1-014190'
     - run: dotnet run
