--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,7 @@ jobs:
     container: gableroux/unity3d:2018.4.9f1
     steps:
       
-      -uses: actions/checkout@v1
+      - uses: actions/checkout@v1
 
       - name: Show Current Directory
         run: pwd
@@ -22,3 +22,6 @@ jobs:
 
       - name: Change Directory
         run: cd ./GitHubActionsExample
+
+      - name: List Show
+        run: ls
