--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,4 +20,4 @@ jobs:
       - uses: actions/upload-artifact@master
         with:
           name: dll
-          path: /opt/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.CoreModule.dll
+          path: /opt/Unity/Editor/Data/Managed/UnityEngine
