--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,10 +15,10 @@ jobs:
       - run: mkdir -p path/to/artifact
 
       - name: Opt
-        run: |
-          cp /opt/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.CoreModule.dll path/to/artifact
+        run: ls -l /opt/Unity/Editor/Data/Managed/UnityEngine/
 
-      - uses: actions/upload-artifact@master
+      - uses: actions/setup-dotnet@v1.1.0
         with:
-          name: my-artifact
-          path: path/to/artifact
+          dotnet-version: '3.0.100-rc1-014190'
+
+      - run: dotnet --version
